@@ -129,8 +129,6 @@ class UserController extends Zend_Controller_Action
 
 	$this->_redirect('user/');
     }
-
-
 }
 
 
